--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb://localhost:27017/foodiespot"
+MONGO_URI="mongodb+srv://dhirajbadaik422:thunderpower1234@cluster0.czdl2pf.mongodb.net/foodispot?retryWrites=true&w=majority&appName=Cluster0"
 CLDN_NAME="dwwftwmlj"
 CLDN_API_KEY="532461982955728"
 CLDN_API_SECRET="4ZUHaDMe3JWrbl_1HPVn7OQuCK8"
