--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -9,39 +9,59 @@ node_modules/
 .env.production.local
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # OS generated files
 .DS_Store
 Thumbs.db
 
-# Debugging
+# Editor directories and files
 .vscode/
 .idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Build output (if using TypeScript or Babel)
+# Build output
 dist/
 build/
 out/
 
-# Optional npm cache directory
+# Optional npm/yarn cache
 .npm/
+.pnpm-debug.log
+.yarn/cache/
+.yarn/unplugged/
+.yarn/build-state.yml
+.yarn/install-state.gz
+.yarn/patches/
 
-# Optional eslint cache
+# ESLint
 .eslintcache
 
-# Coverage directory used by tools like istanbul
+# Coverage reports
 coverage/
 
 # PM2 process manager logs
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
 # Others
 uploads/
+
+# macOS specific
+.AppleDouble
+.LSOverride
+
+# Windows specific
+ehthumbs.db
+Desktop.ini
